LU-534 mds_check_stale_orphan() should not always return 0

mds_check_stale_orphan() need to report error, or else mds_open could
open|create an orphan inode.

Change-Id: Id2bb8a0edd83773141caa4b8dfa42923765d541f
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>