lustre/mds/mds_unlink_open.c
@@ -365,7 +365,7 @@ int mds_check_stale_orphan(struct obd_device *obd, struct ll_fid *fid)
                 /* bz18927: The exactly same inode can be marked as orphan
                  * if there was open|creat replay and this is second one */
                 if (inode->i_generation == fid->generation)
-                        GOTO(unlock_child, rc);
+                        GOTO(unlock_child, rc = -ESTALE);
 
                 if (mds_orphan_open_count(inode) > 0) {
                         CERROR("Orphan "LPU64"/%u is in use!\n",
@@ -402,5 +402,5 @@ unlock:
         UNLOCK_INODE_MUTEX(pending_dir);
 out:
         l_dput(result);
-        RETURN(0);
+        RETURN(rc);
 }
